# lidar_inertial_odometry

./: CMakeLists.txt  README.md  build.sh  plot_benchmark.py
app/: lio_player.cpp
config/: avia.yaml  mid360.yaml  os128.yaml
src/core/: Estimator.cpp  Estimator.h  VoxelMap.cpp  VoxelMap.h
src/util/: ConfigUtils.cpp  ConfigUtils.h  PointCloudUtils.cpp  PointCloudUtils.h
src/viewer/: LIOViewer.cpp
